--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
-name = "crappy-shop"
+name = "crappy_shop"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.9.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
+sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
+log = "0.4.22"
