--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde_json = "1.0"
 chrono = "0.4"
 sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
 log = "0.4.22"
+urlencoding = { version = "2.1.3", features = [] }
+dotenvy = "0.15.7"
+do-notation = "0.1.3"
