--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ log = "0.4.22"
 urlencoding = { version = "2.1.3", features = [] }
 dotenvy = "0.15.7"
 do-notation = "0.1.3"
+async-trait = "0.1.83"
