--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ urlencoding = { version = "2.1.3", features = [] }
 dotenvy = "0.15.7"
 do-notation = "0.1.3"
 async-trait = "0.1.83"
+bcrypt = "0.16.0"
