--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ dotenvy = "0.15.7"
 do-notation = "0.1.3"
 async-trait = "0.1.83"
 bcrypt = "0.16.0"
+validator = { version = "0.19", features = ["derive"] }
