--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ do-notation = "0.1.3"
 async-trait = "0.1.83"
 bcrypt = "0.16.0"
 validator = { version = "0.19", features = ["derive"] }
+jsonwebtoken = "9.3.0"
