--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ validator = { version = "0.19", features = ["derive"] }
 jsonwebtoken = "9.3.0"
 futures-util = "0.3.31"
 env_logger = "0.11.5"
+rust_decimal = "1.36.0"
+derive_more = { version = "1.0.0", features = ["from", "display"] }
