--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 [dependencies]
 entity = { path = "../entity" }
 fake = { version = "3.0.1", features = ["derive"] }
+rust_decimal = "1.36.0"
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 
 [dependencies.sea-orm-migration]
